# item_backup_simple

./: .gitignore  163_email.env  README.md  clear_database.py  demonstrate_refactored_system.py  mysql.env  pyproject.toml  run.py  temp.py  test_refactor.py  test_refactor_simple.py  test_refactored.py  test_refactored_system.py  todo  upload_progress.json
.claude/: settings.local.json
src/item_backup_item/: main.py  new_main.py  single_file_processor.py
src/item_backup_item/config/: __init__.py  classify_config.py  disk_space_config.py  hash_config.py  mysql_config.py  processing_config.py  zip_config.py
src/item_backup_item/control/: __init__.py  async_upload_service.py  classify.py  classify_item.py  delete.py  disk_space_manager.py  file_processor_coordinator.py  hash.py  hash_process.py  single_file_processor.py  source_hash.py  unzip.py  unzip_hash.py  upload.py  zip.py  zip_control.py  zip_hash.py
src/item_backup_item/core/: __init__.py  classfiy_core.py
src/item_backup_item/core/hash_core/: __init__.py  file_hash.py
src/item_backup_item/database/: __init__.py
src/item_backup_item/database/mysql/: __init__.py  client.py  models.py
src/item_backup_item/monitor/: __init__.py  monitoring_system.py
src/item_backup_item/schemes/: __init__.py  control.py
src/item_backup_item/service/: __init__.py  classfiy_service.py  email_service.py  fetch_service.py  format_service.py  persist_service.py  storag_service.py  storage_service_old.py  zip_service.py
src/item_backup_item/service/calculate_hash_service/: core.py  file_hash.py  folder_hash.py
src/item_backup_item/utils/: disk_space_manager.py  error_handler.py  error_recovery.py  monitor.py  resource_manager.py  state_machine.py  upload_manager.py
test_case/: test_calculate_hash.py  test_hash_process.py  test_upload_service.py  test_zip.py
(+4 files in other folders)
